<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_mainpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottom_height" />

    <RadioGroup
        android:id="@+id/rg_main_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_height"
        android:background="@color/bottom_g"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_tab_ask"
            style="@style/tab_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/nav_bottom_1"
            android:gravity="center"
            android:text="@string/actmain_rb_tab_ask"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/rb_tab_find_teacher"
            style="@style/tab_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:button="@null"
            android:drawableTop="@drawable/nav_bottom_3"
            android:gravity="center"
            android:text="@string/actmain_rb_tab_find"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/rb_tab_msg"
            style="@style/tab_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:button="@null"
            android:drawableTop="@drawable/nav_bottom_2"
            android:gravity="center"
            android:text="@string/actmain_rb_tab_msg"
            android:textSize="13sp" />
        <RadioButton
            android:id="@+id/rb_tab_me"
            style="@style/tab_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:button="@null"
            android:drawableTop="@drawable/nav_bottom_4"
            android:gravity="center"
            android:text="@string/actmain_rb_tab_me"
            android:textSize="13sp" />
    </RadioGroup>

</RelativeLayout>