<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        android:id="@+id/menu_title"
        layout="@layout/title" />

    <LinearLayout
        android:id="@+id/ll_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_title"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16sp"
        android:background="@drawable/round_stoke_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_pwd_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/pw_change_old_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:background="@color/border_line">
        </View>

        <EditText
            android:id="@+id/et_pwd_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/pw_change_new_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:background="@color/border_line">
        </View>

        <EditText
            android:id="@+id/et_pwd_new_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/pw_change_again_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        style="@style/menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ll_panel"
        android:layout_alignRight="@+id/ll_panel"
        android:layout_below="@+id/ll_panel"
        android:layout_marginTop="16dp"
        android:background="@drawable/default_btn_green"
        android:enabled="false"
        android:padding="8dp"
        android:text="@string/pw_change_commit" />
</RelativeLayout>