<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include
        android:id="@+id/menu_title"
        layout="@layout/title" />

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_about" />

    <TextView
        android:id="@+id/version_name_tv"
        style="@style/userinfo_key_textView_style"
        android:layout_below="@+id/app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical" />

    <ImageView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/version_name_tv"
        android:layout_marginTop="30dp"
        android:background="@color/deep_dark" />

    <TextView
        android:id="@+id/use_agreement_tv"
        style="@style/setting_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:text="@string/self_about_argeement" />

    <ImageView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/use_agreement_tv"
        android:background="@color/deep_dark" />

    <TextView
        android:id="@+id/use_pingjia"
        style="@style/setting_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/line2"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:text="@string/self_about_pingjia" />

    <ImageView
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/use_pingjia"
        android:background="@color/deep_dark" />

    <TextView
        android:id="@+id/use_share"
        style="@style/setting_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/line3"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:text="@string/self_about_share" />

    <ImageView
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/use_agreement_tv"
        android:background="@color/deep_dark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/company_name"
        android:textColor="#999999"
        android:textSize="14sp" />
</RelativeLayout>