<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_user_detail"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="@color/green_b"
            android:gravity="center">

            <ImageView
                android:id="@+id/riv_avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/default_avatar_s"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp" />

            <LinearLayout
                android:id="@+id/v_anchor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/riv_avatar"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/v_anchor"
                    android:layout_alignLeft="@+id/v_anchor"
                    android:textColor="@color/white"
                    android:text="小小冷" />

                <TextView
                    android:id="@+id/tv_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/v_anchor"
                    android:layout_below="@+id/v_anchor"
                    android:textColor="@color/white"
                    android:text="手机号：18311454735"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/now_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:text="立即登录"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/btn_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/right_s" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_feedback"
                style="@style/setting_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/self_feedback" />

            <include layout="@layout/layout_self_line" />

            <RelativeLayout
                android:id="@+id/rl_my_update"
                style="@style/userinfo_rl_style"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    style="@style/userinfo_key_textView_style"
                    android:text="@string/self_update" />

                <ImageView
                    android:id="@+id/iv_arrow_update"
                    style="@style/image_arrow_style" />

                <TextView
                    android:id="@+id/tv_update"
                    style="@style/userinfo_value_textView_style"
                    android:layout_toLeftOf="@+id/iv_arrow_update"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />
            </RelativeLayout>

            <include layout="@layout/layout_self_line" />

            <TextView
                android:id="@+id/tv_about"
                style="@style/setting_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/self_about" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>